fix bug import libary and delete comment